feat: addressing code-rabbit comments
Signed-off-by: duttarnab <arnab.bdutta@gmail.com>